

DescToolsAddIns 1.8 (2020-06-08)
---------------------------------

NEW FUNCTIONS ADDED:
   * 

UPDATED FUNCTIONS:
   * 

DEPRECATED:
   * 



DescToolsAddIns 1.7 (2020-03-08)
---------------------------------

NEW FUNCTIONS ADDED:
   * Shuffle() merges the selected lines in a random order.
   * GetExcelRangeH() imports the data from Excel using a header.

UPDATED FUNCTIONS:
   * ModelDlg() gets some brushups.
   * Selecting with Select() xy or loc will start the locator and replace the 
     selection with the coordinates. 

DEPRECATED:
   * FlipSlash() has been removed. FlipBackSlash() will now flip-flop between 
     slashes and backslashes. The option "ReplaceDoubleSlash = TRUE/FALSE" can
     be used to control the replacement to either replace double slashes by 
     simple ones or not.



DescToolsAddIns 1.6 (2020-01-10)
---------------------------------

NEW FUNCTIONS ADDED:
   * RemoveDuplicates() has been added and does what it says.
   * SortAsc() and SortDesc() sorts the selected text rowwise.
   * CreateBookmark will take the selected text and use it as name
     for a new bookmark to be inserted in the cursor position of 
     a running Word instance.

UPDATED FUNCTIONS:
   * Enquote() and EnquoteS() will retain the selection.

BUGFIXES:
   * DescTools functions will be executed also in cases when the 
     package has not been loaded before.




DescToolsAddIns 1.5 (2019-10-27)
---------------------------------

NEW FUNCTIONS ADDED:
  * ToWrd() sends the output of the selection directly to the current Word
    instance.
  * ToWrdWithBookmark() sends the output of the selection directly to the
    current Word instance and tags the output with a bookmark.
  * ToWrdPlotWithBookmark() sends the output of a plot code directly to the
    current Word instance and tags the output with a bookmark.
  * UpdateBookmark() evaluates the selection and updates a bookmarked output 
    in Word.
  * FileBrowserOpen() opens a file browser window with the selection 