@@ -3,11 +3,12 @@ export("Str", "Desc", "Select", "Plot", "PlotD", "Head", "BuildModel", "Edit", "
        "FileSaveAs" , "XLView","IntView", "FileOpen", "FileBrowserOpen", "FlipBackSlash", "Example", "PlotPar", "PlotPch", "PlotMar",
        "Info","FileOpenDlg", "Xplore", "dir.choose", "ColorDlg", "SelectVarDlg", "FileImportDlg", "ColPicker",
        "SetArrow", "Enquote", "EnquoteS", "EvalEnquote", "InspectPnt", "Unclass","GetExcelRange", "GetExcelRangeH","FlushToSource", "RemoveDuplicates",
-       "SortAsc", "SortDesc", "Shuffle", "CreateBookmark", "Str1")
+       "SortAsc", "SortDesc", "Shuffle", "CreateBookmark", "DeleteBookmark","SelectBookmark","Str1")
 
 importFrom("DescTools", "Desc", "Str", "Abstract", "Some", "Arrow", "Pal",
            "StrTrim", "Format", "Label", "StrExtract", "StrTrunc", "IsNumeric", "SplitPath",
-           "ToWrdB", "WrdGoto", "DescToolsOptions","WrdBookmark", "WrdInsertBookmark")
+           "ToWrdB", "WrdGoto", "DescToolsOptions","WrdBookmark", "WrdInsertBookmark",
+           "WrdDeleteBookmark")
 
 importFrom("rstudioapi", "insertText","getActiveDocumentContext", "sendToConsole", "modifyRange")
 importFrom("tcltk", "tkgetSaveFile", "tclvalue")
